attempting to fix landing img misalignment

--- a/client/src/components/LandingBlock.css
+++ b/client/src/components/LandingBlock.css
@@ -75,8 +75,8 @@
     .landing-img {
         margin-left: -30vw;
         margin-top: -10vh;
-        width: 120vh;
-        height: 120vh;
+        width: 120vw;
+        height: 120vw;
     }
 }
 
